--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,4 @@
+
 {
-    "version": 2,
-    "name": "fiverr-clone",
-    "builds": [
-        {
-            "src": "./index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/index.js"
-        }
-    ]
+    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
 }
